added abstract and read

--- a/refs.bib
+++ b/refs.bib
@@ -8,6 +8,36 @@
   author    = {Glen E. Brendon},
   publisher = {Springer New York, NY}
 }
+@inbook{dimension,
+  isbn      = {9780691627748},
+  url       = {http://www.jstor.org/stable/j.ctt183pk8v.8},
+  author    = {Witold Hurewicz and Henry Wallman},
+  booktitle = {Dimension Theory (PMS-4)},
+  pages     = {52--73},
+  publisher = {Princeton University Press},
+  title     = {Covering and Imbedding Theorems},
+  urldate   = {2024-06-12},
+  year      = {1941}
+}
+@article{hanner,
+  title     = {Some theorems on absolute neighborhood retracts},
+  author    = {Hanner, Olof},
+  journal   = {Arkiv f{\"o}r Matematik},
+  volume    = {1},
+  number    = {5},
+  pages     = {389--408},
+  year      = {1951},
+  publisher = {Springer}
+}
+@article{hirsch,
+  title   = {On normal microbundles},
+  author  = {Hirsch, Morris W},
+  journal = {Topology},
+  volume  = {5},
+  number  = {3},
+  pages   = {229--240},
+  year    = {1966}
+}
 @article{kervaire,
   title   = {A manifold which does not admit any differentiable structure},
   author  = {Kervaire, Michel A},
@@ -80,6 +110,14 @@
   volume    = {87},
   year      = {1968}
 }
+@article{whitehead,
+  title     = {Manifolds with transverse fields in euclidean space},
+  author    = {Whitehead, J Henry C},
+  journal   = {Annals of Mathematics},
+  pages     = {154--212},
+  year      = {1961},
+  publisher = {JSTOR}
+}
 @article{williamson,
   title     = {Cobordism of combinatorial manifolds},
   author    = {Williamson, Robert E},
@@ -87,25 +125,4 @@
   pages     = {1--33},
   year      = {1966},
   publisher = {JSTOR}
-}
-@article{hanner,
-  title={Some theorems on absolute neighborhood retracts},
-  author={Hanner, Olof},
-  journal={Arkiv f{\"o}r Matematik},
-  volume={1},
-  number={5},
-  pages={389--408},
-  year={1951},
-  publisher={Springer}
-}
-@inbook{dimension,
- ISBN = {9780691627748},
- URL = {http://www.jstor.org/stable/j.ctt183pk8v.8},
- author = {WITOLD HUREWICZ and HENRY WALLMAN},
- booktitle = {Dimension Theory (PMS-4)},
- pages = {52--73},
- publisher = {Princeton University Press},
- title = {Covering and Imbedding Theorems},
- urldate = {2024-06-12},
- year = {1941}
 }
