--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,5 +1,14 @@
 \begin{abstract}
-    \begin{center}
-        % TODO
-    \end{center}
+    This paper presents the concept of microbundles
+    as introduced in 1964 by John Milnor.
+    After showing some fundamental properties and constructions,
+    including the induced microbundle and the Whitney sum,
+    we discuss the concept of tangent- and normal microbundles
+    over topological manifolds.
+    We prove that for every microbundle over a
+    simplicial complex, there exists an inverse in respect to the Whitney sum.
+    Furthermore, we show that homotopic maps yield isomorphic induced microbundles.
+    These results permit the proof
+    that every submanifold $N \sub M$ has a normal microbundle
+    in a stabilized surrounding manifold $M \cross \R^q$.
 \end{abstract}
