--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -30,7 +30,9 @@
 \newtheorem{example}[statement]{Example}
 
 % myparagraph
-\newenvironment{myparagraph}{\hspace{\parindent}}{}
+\newenvironment{myparagraph}{%
+  %\hspace{\parindent}
+}{}
 
 % mystatement
 \NewDocumentEnvironment{mystatement}{momo}{%
