--- a/src/sections/germ/parts/bundle.tex
+++ b/src/sections/germ/parts/bundle.tex
@@ -7,7 +7,7 @@
 \end{myparagraph}
 
 % definition
-\begin{mystatement}{definition}[bundle-germ]{homotopy::bundle}
+\begin{mystatement}{definition}[bundle-germ]{homotopy::bundle}[66]
     Let $\bb$ and $\bb'$ be two microbundles over $B$ and $B'$
     with the same fiber dimension.
     A \defterm{bundle-germ} $\germdef{F}{\bb}{\bb'}$ is a map-germ
@@ -26,4 +26,6 @@
         \end{tikzcd}
     \end{center}
     We say $F$ \defterm{is covered by} $F\restr{B}$.
+    % intentionally left blank
+    
 \end{myparagraph}
