--- a/src/sections/germ/parts/isomorphism.tex
+++ b/src/sections/germ/parts/isomorphism.tex
@@ -30,14 +30,14 @@
 \end{myparagraph}
 
 % definition
-\begin{mystatement}{definition}[isomorphism-germ]{homotopy::isomorphism}
+\begin{mystatement}{definition}[isomorphism-germ]{homotopy::isomorphism}[65]
     An \defterm{isomorphism-germ} between $\bb$ and $\bb'$ is a homeomorphism-germ 
     \[ \germdef{F}{(E(\bb), B)}{(E(\bb'), B)} \]
     which is \defterm{fiber-preserving}, that is $J' \circ F = J$.
 \end{mystatement}
 
 % remark
-\begin{mystatement}{remark}{homotopy::isomorphismremark}
+\begin{mystatement}{remark}{homotopy::isomorphismremark}[65]
     There exists an isomorphism-germ between $\bb$ and $\bb'$
     if and only if $\bb$ and $\bb'$ are isomorphic.
 \end{mystatement}
