--- a/src/sections/induced/parts/const.tex
+++ b/src/sections/induced/parts/const.tex
@@ -12,7 +12,7 @@
     The total space $E(\ind{c_{A, b_0}}\bb)$ is defined as
     \[ \set{(a, e) \in A \cross E(\bb)}{f(a) = b_0 = j(e)} = A \cross \inv{j}(b_0). \]
 
-    Let $(U, V, \phi)$ be local trivialization for $b_0$ in $\bb$.
+    Let $(U, V, \phi)$ be a local trivialization for $b_0$ in $\bb$.
     Restricting $\phi$ to the fiber $\inv{j}(b_0)$ yields a homeomorphism
     \[ \phi\restr{\inv{j}(b_0)}: V \cap \inv{j}(b_0) \isomto b_0 \times \R^n \]
     It follows that $\psi: A \cross (V \cap \inv{j}(b_0)) \isomto A \cross \R^n$ with
