--- a/src/sections/induced/parts/restriction.tex
+++ b/src/sections/induced/parts/restriction.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{example}[restricted microbundle]{induced::restricted}    
+\begin{mystatement}{example}[restricted microbundle]{induced::restricted}[54]   
     Let $\bundledef{\bb}{B}{E}{i}{j}$ be a microbundle and $A \sub B$ be a subspace.
     The \defterm{restricted microbundle} $\bb[A]$ is the induced microbundle $\ind{\iota}\bb$
     where $\iota: A \incl B$ denotes the inclusion map.
