--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -17,7 +17,7 @@
                 & U \cross\R^n \ar[ur, "\pi_1"'] &
             \end{tikzcd}
         \]
-        Note that $\pi_1$ denotes the projection $(u, x) \mapsto x$.
+        Note that $\pi_1$ denotes the projection on the first component $(u, x) \mapsto x$.
     \end{properties}
 \end{mystatement}
 
