--- a/src/sections/microbundle/parts/tangent.tex
+++ b/src/sections/microbundle/parts/tangent.tex
@@ -1,11 +1,11 @@
 % foreword
 \begin{myparagraph}
-    The following example is the microbundle analog
-    to the tangent bundle over smooth manifolds.
+    The following definition is the microbundle analog
+    to the tangent vector bundle.
 \end{myparagraph}
 
-% example
-\begin{mystatement}{example}[tangent microbundle]{microbundle::tangent}
+% definition
+\begin{mystatement}{definition}[tangent microbundle]{microbundle::tangent}[55]
     The \defterm{tangent microbundle} $\bt_M$ over a topological $d$-manifold $M$ is a diagram
     \[ \bundle{M}{M \cross M}{\Delta}{\pi_1} \]
     where $\Delta(m) := (m, m)$ denotes the diagonal map.
@@ -37,13 +37,3 @@
 \begin{mystatement}{remark}{microbundle::tangentdim}
     The tangent microbundle $\bt_M$ has fiber dimension $d$.
 \end{mystatement}
-
-% afterword
-% \begin{myparagraph}
-%     The definition of the tangent microbundle
-%     utilizes the fact that one can subtract two elements in euclidean space
-%     by using a chart for $p$.
-%     The constructed homeomorphy is hence dependant
-%     of the chosen chart.
-%     % TODO: explain tangent microbundle further
-% \end{myparagraph}
