--- a/src/sections/microbundle/parts/trivial.tex
+++ b/src/sections/microbundle/parts/trivial.tex
@@ -1,10 +1,5 @@
-% foreword
-\begin{myparagraph}
-    The most obvious example for a microbundle is the standard microbundle.
-\end{myparagraph}
-
 % example
-\begin{mystatement}{example}[trivial microbundle]{microbundle::trivial}
+\begin{mystatement}{example}[trivial microbundle]{microbundle::trivial}[55]
     Given a topological space $B$, the \defterm{standard microbundle} $\be{B}$ over $B$ is a diagram
     \[ \bundle{B}{B \cross \R^n}{\iota}{\pi_1} \]
     where $\iota(b) := (b, 0)$ and $\pi_1(b, x) := b$.
