--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -1,5 +1,5 @@
 % example
-\begin{mystatement}{example}[underlying microbundle]{microbundle::underlying}
+\begin{mystatement}{example}[underlying microbundle]{microbundle::underlying}[55]
     Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle.
     The \defterm{underlying microbundle} $\abs{\xi}$ of $\xi$ is a microbundle
     \[ \bundledef{\abs{\xi}}{B}{E}{i}{\pi} \]
