--- a/src/sections/microbundle/section.tex
+++ b/src/sections/microbundle/section.tex
@@ -1,8 +1,11 @@
 \begin{myparagraph}
     This section introduces the concept of microbundles
-    together with some basic properties.
+    along with some basic properties.
     We clarify what a microbundle is, what it means for a microbundle to be trivial and 
-    cover some fundamental examples for microbundles.
+    cover some basic examples of microbundles, including the tangent microbundle over topological manifolds.
+
+    Throughout this thesis,
+    we require that every topological manifold is paracompact and second-countable.
 \end{myparagraph}
 \input{src/sections/microbundle/parts/definition}
 \input{src/sections/microbundle/parts/local}
