--- a/src/sections/normal/parts/composition.tex
+++ b/src/sections/normal/parts/composition.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{definition}[composition microbundle]{normal::composition}
+\begin{mystatement}{definition}[composition microbundle]{normal::composition}[63]
     Let $\ba$ be a $n$-dimensional microbundle
     \[ \bundledef{\ba}{A}{E(\ba)}{i_a}{j_a} \]
     and let $\bb$ be a $n'$-dimensional microbundle
