--- a/src/sections/normal/parts/definition.tex
+++ b/src/sections/normal/parts/definition.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{definition}[normal microbundle]{normal::definition}
+\begin{mystatement}{definition}[normal microbundle]{normal::definition}[61]
     Let $M$ be a topological manifold together with a submanifold $N \sub M$.
     A \defterm{normal microbundle} $\bn$ of $N$ in $M$ is a microbundle
     \[ \bundle{N}{U}{\iota}{r} \]
