--- a/src/sections/normal/parts/transitivity.tex
+++ b/src/sections/normal/parts/transitivity.tex
@@ -1,5 +1,5 @@
 % lemma
-\begin{mystatement}{lemma}{normal::transitivity}
+\begin{mystatement}{lemma}{normal::transitivity}[62]
     Let $P \sub N \sub M$ be a chain of topological submanifolds.
     There exists a normal microbundle
     \[ \bundledef{\bn}{P}{U}{\iota}{r} \]
