--- a/src/sections/normal/parts/uniqueness.tex
+++ b/src/sections/normal/parts/uniqueness.tex
@@ -9,7 +9,7 @@
 \end{myparagraph}
 
 % statement
-\begin{mystatement}{proposition}{normal::uniqueness}
+\begin{mystatement}{proposition}{normal::uniqueness}[63]
     Let $N \sub M$ be an embedded submanifold.
     Suppose there exists a normal microbundle
     $\bundledef{\bn}{N}{U}{\iota}{r}$ in $M$.
