--- a/src/sections/rooted/parts/homotopy.tex
+++ b/src/sections/rooted/parts/homotopy.tex
@@ -9,7 +9,7 @@
 \end{myparagraph}
 
 % theorem
-\begin{mystatement}{theorem}[Rooted Homotopy Theorem]{suspension::homotopy}
+\begin{mystatement}{theorem}[Rooted Homotopy Theorem]{suspension::homotopy}[69]
     Let $\bb$ be a rooted microbundle over $B$ and $f, g: A \to B$ be two based maps
     where $A$ is paracompact hausdorff.
     If there exists a homotopy $H: \cyl{A} \to B$ between $f$ and $g$ that leaves the base point fixed,
@@ -37,7 +37,7 @@
 \end{myparagraph}
 
 % lemma
-\begin{mystatement}{lemma}{suspension::sharper}
+\begin{mystatement}{lemma}{suspension::sharper}[69]
     Let $\bb$ be a rooted microbundle over $B$ and
     let $H: \cyl{A} \to B$ be a map that leaves the base point fixed.
     Then there exists a neighborhood $V$ of $a_0$ together with an isomorphism-germ
