--- a/src/sections/rooted/parts/induced.tex
+++ b/src/sections/rooted/parts/induced.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{definition}{suspension::induced}
+\begin{mystatement}{definition}{suspension::induced}[57]
     Let $\bb$ be a rooted microbundle over $B$ and $f: A \to B$ a based map.
     We equip the induced microbundle $\ind{f}\bb$ with the rooting
     \[
