--- a/src/sections/rooted/parts/rooted.tex
+++ b/src/sections/rooted/parts/rooted.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{definition}{suspension::rooted}
+\begin{mystatement}{definition}{suspension::rooted}[69]
     % rooted
     A \defterm{rooted microbundle} $\bb$ over $B$ is a microbundle
     over $B$ together with an isomorphism-germ
