--- a/src/sections/rooted/parts/wedge.tex
+++ b/src/sections/rooted/parts/wedge.tex
@@ -15,7 +15,7 @@
 \end{myparagraph}
 
 % definition
-\begin{mystatement}{definition}{suspension::wedge}
+\begin{mystatement}{definition}{suspension::wedge}[70] % ? remove citation
     Let $\ba$ and $\bb$ be two rooted microbundles over $A$ and $B$.
     % microbundle
     The \defterm{wedge sum} $\ba \vee \bb$ of $\ba$ and $\bb$ is a microbundle
