--- a/src/sections/suspension/parts/commutativity.tex
+++ b/src/sections/suspension/parts/commutativity.tex
@@ -1,5 +1,5 @@
 % lemma
-\begin{mystatement}{lemma}{suspension::commutativity}
+\begin{mystatement}{lemma}{suspension::commutativity}[71]
     The rooted microbundles
     $\whitney{\bb}{\be{B}}$ and $\whitney{\be{B}}{\bb}$ are rooted isomorphic. 
 \end{mystatement}
