--- a/src/sections/suspension/parts/reflection.tex
+++ b/src/sections/suspension/parts/reflection.tex
@@ -8,7 +8,7 @@
 \end{myparagraph}
 
 % lemma
-\begin{mystatement}{lemma}{suspension::reflection}
+\begin{mystatement}{lemma}{suspension::reflection}[70]
     The induced microbundle $\ind{\phi}(\bb \vee \ind{r}\bb)$ is trivial.
 \end{mystatement}
 
