--- a/src/sections/suspension/parts/theorem.tex
+++ b/src/sections/suspension/parts/theorem.tex
@@ -1,5 +1,5 @@
 % theorem
-\begin{mystatement}{theorem}{suspension::theorem}
+\begin{mystatement}{theorem}{suspension::theorem}[71]
     If $\ba$ and $\bb$ are rooted microbundles
     over a paracompact hausdorff space $B$, then
     \[ \whitney{\ind{\phi}(\ba \vee \bb)}{\be{B}} = \whitney{\ba}{\bb}. \]
@@ -29,7 +29,7 @@
 \end{myproof}
 
 % corollary
-\begin{mystatement}{corollary}{suspension::corollary}
+\begin{mystatement}{corollary}{suspension::corollary}[72]
     The wedge sum $\whitney{\bb}{\ind{r}\bb}$ is trivial.
 \end{mystatement}
 
