--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -1,28 +1,27 @@
-% \begin{titlepage}
-%     \begin{center}
-%         % University Logo
-%         % \includegraphics[width=0.5\textwidth]{university}
+\begin{titlepage}
+    \begin{center}
+        \vspace{1.5cm}
+        
+        \begin{Large}Bachelorarbeit\end{Large}
+        
+        \vspace*{1cm}
 
-%         \vfill % fill
+        \begin{LARGE}\textbf{Microbundles on Toplogical Manifolds}\end{LARGE}
+             
+        \vspace{1cm}
+ 
+        \begin{large}\textbf{Florian Burger}\end{large}
+ 
+        \vfill
+             
+        \begin{large}
+            Betreut durch Prof. Dr. Markus Banagl                
+            
+            \vspace{0.5cm}
 
-%         % Title
-%         \Huge
-%         \textbf{Microbundles on Topological Manifolds}
-
-%         \vspace{0.5cm} % spacing
-
-%         % Subtitle
-%         \LARGE
-%         based on J. Milnors studies on microbundles
-
-%         \vspace{1.5cm} % spacing
-
-%         % Author
-%         \textbf{Florian Burger}
-%     \end{center}
-% \end{titlepage}
-
-\title{Microbundles on Topological Manifolds}
-\author{Florian Burger}
-\email{florian.burger@stud.uni-heidelberg.de}
-\date{\today}
+            Fakultät für Mathematik und Informatik\\
+            Ruprecht-Karls-Universität Heidelberg\\
+            Heidelberg, den 1. Juli 2024
+        \end{large}
+    \end{center}
+ \end{titlepage}
