--- a/src/packages.tex
+++ b/src/packages.tex
@@ -1,57 +1,44 @@
+% math
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{mathtools}
 
-% Dummy Text NOTE: Remove before Distribution
-\usepackage{lipsum}
-
-\usepackage{hyperref} % Links
-\usepackage{cleveref} % Referring to Statements
-\crefdefaultlabelformat{#2\bfseries\upshape(#1)#3}          
-\creflabelformat{equation}{#2\bfseries\upshape(#1)#3}
-\hypersetup{colorlinks=true,citecolor=red, linkcolor=blue}
+% utils
 \usepackage{tikz-cd} % Diagrams
 \usepackage{parskip} % No Paragraph Indentation
 \usepackage{xparse} % Multiple Optional Arguments
 \usepackage{ifthen} % If-Else Statements
 \usepackage{enumerate} % Enumerate with romans
 
+% references
+\usepackage{hyperref} % Links
+\usepackage{cleveref} % Referring to Statements
+\crefdefaultlabelformat{#2\bfseries\upshape(#1)#3}          
+\creflabelformat{equation}{#2\bfseries\upshape(#1)#3}
+\hypersetup{colorlinks=true,citecolor=red, linkcolor=blue}
+\usepackage{cite}
+
 % leftbar
-\usepackage{framed}
-\newlength{\leftbarwidth}
-\setlength{\leftbarwidth}{1.5pt}
-\newlength{\leftbarsep}
-\setlength{\leftbarsep}{7.5pt}
-\newcommand*{\leftbarcolorcmd}{\color{leftbarcolor}}% as a command to be more flexible
-\colorlet{leftbarcolor}{black}
-\renewenvironment{leftbar}{%
-    \def\FrameCommand{{\leftbarcolorcmd{\vrule width \leftbarwidth\relax\hspace {\leftbarsep}}}}%
-    \MakeFramed {\advance \hsize -\width \FrameRestore }%
-}{%
-    \endMakeFramed
-}
+% \usepackage{framed}
+% \newlength{\leftbarwidth}
+% \setlength{\leftbarwidth}{1.5pt}
+% \newlength{\leftbarsep}
+% \setlength{\leftbarsep}{7.5pt}
+% \newcommand*{\leftbarcolorcmd}{\color{leftbarcolor}}% as a command to be more flexible
+% \colorlet{leftbarcolor}{black}
+% \renewenvironment{leftbar}{%
+%     \def\FrameCommand{{\leftbarcolorcmd{\vrule width \leftbarwidth\relax\hspace {\leftbarsep}}}}%
+%     \MakeFramed {\advance \hsize -\width \FrameRestore }%
+% }{%
+%     \endMakeFramed
+% }
 
-% Underline
-\usepackage{soul}
-
-% Images
+% images
 \usepackage{graphicx}
 \graphicspath{{images/}}
 
-% \setcounter{chapter}{-1}
-\usepackage{emptypage}
-
-% \usepackage[
-% backend=biber,
-% style=alphabetic,
-% sorting=ynt
-% ]{biblatex}
-% \cref
-\usepackage{cite}
-
-\setcounter{tocdepth}{1}
-
+% enumerate
 \usepackage{enumitem}
 \newlist{steps}{enumerate}{1}
 \setlist[steps]{label=\textit{\textbf{Step \arabic*:}},wide}
@@ -62,18 +49,19 @@
 \newlist{sectionize}{enumerate}{1}
 \setlist[sectionize]{label=\textit{\textbf{\arabic*:}},wide}
 
-\newcommand{\step}[1]{\item #1}
-
 \newlist{properties}{enumerate}{1}
 \setlist[properties]{label=\textit{(\roman*)},leftmargin=*}
 
+% equations
 \usepackage{etoolbox}
 \AtBeginEnvironment{equation}{\setcounter{equation}{0}} 
 \AtBeginEnvironment{align}{\setcounter{equation}{0}} 
 \AtBeginEnvironment{gather}{\setcounter{equation}{0}}
 
-\makeatletter
-\renewcommand\subsection{\@startsection{subsection}{2}%
-  \z@{.5\linespacing\@plus.7\linespacing}{-.5em}%
-  {\normalfont\scshape}}
-\makeatother
+% table of contents
+\setcounter{tocdepth}{1}
+
+% heading
+% \makeatletter
+% \renewcommand\subsection{\@startsection{subsection}{2}\z@{.5\linespacing\@plus.7\linespacing}{-.5em}{\normalfont\scshape}}
+% \makeatother
