--- a/src/sections/microbundle/parts/isomorphy.tex
+++ b/src/sections/microbundle/parts/isomorphy.tex
@@ -5,7 +5,7 @@
 \end{myparagraph}
 
 % definition
-\begin{mystatement}{definition}[isomorphy]{microbundle::isomorphy}
+\begin{mystatement}{definition}[isomorphy]{microbundle::isomorphy}[56]
     Two microbundles $\bundledef{\bb_1}{B}{E_1}{i_1}{j_1}$ and $\bundledef{\bb_2}{B}{E_2}{i_2}{j_2}$
     are \defterm{isomorphic} if there exist neighborhoods $V_1$ of $i_1(B)$ and $V_2$ of $i_2(B)$
     together with a homeomorphism $\psi: V_1 \isomto V_2$
