--- a/src/sections/microbundle/parts/paracompact.tex
+++ b/src/sections/microbundle/parts/paracompact.tex
@@ -1,10 +1,12 @@
 % foreword
 \begin{myparagraph}
-    We provide a triviality criteria for microbundles over paracompact hausdorff base spaces.
+    Considering microbundles over topological manifolds,
+    which are paracompact hausdorff,
+    triviality has stronger implications for the total space.
 \end{myparagraph}
 
 % lemma
-\begin{mystatement}{lemma}{microbundle::paracompact}
+\begin{mystatement}{lemma}{microbundle::paracompact}[57]
     A microbundle $\bb$ over a paracompact hausdorff space $B$ is trivial
     if and only if there exists an open neighborhood $V$ of $i(B)$ such that $V \cong B \cross \R^n$
     with injection and projection maps being compatible with this homeomorphism.
@@ -12,45 +14,48 @@
 
 % afterword
 \begin{myparagraph}
-    So for trivial microbundles $\bb$ over $B$, given that the $B$ is paracompact hausdorff,
-    we may assume that an open subset of $E(\bb)$ is homeomorphic to the whole $B \cross \R^n$,
-    instead of only a neighborhood of $\cyldown{B}$.
+    So we may assume that an open subset of $E(\bb)$ is homeomorphic to the whole $B \cross \R^n$,
+    instead of only a neighborhood of $\cyldown{B}$ given by the definition of triviality.
 \end{myparagraph}
 
 % proof
 \begin{myproof}
+    We show both implications.
+
+    `$\impliedby$'
+
+    This is simply a weakening of the definition of triviality. 
+
     `$\implies$'
 
     By restricting $E(\bb)$ to an open neighborhood
     and applying \myintref{microbundle::total} if necessary,
-    we may assume that $E(\bb)$ is an open subset of $B \cross \R^n$.
+    we may assume that the entire $E(\bb)$ is an open subset of $B \cross \R^n$.
 
-    Since $E(\bb)$ is a neighborhood of $\cyldown{B}$, there exist $B_i \sub B$ open and $0 < \eps_i < 1$ with
-    \[ \bigcup_{i \in I } B_i \cross \ball[\eps_i] \sub E(\bb)\]
-    such that $\bigcup_{i \in I} B_i = B$.
-    Without loss of generality, we may assume that the collection $\{B_i\}$ is locally finite because if not
-    we can simply choose a locally finite refinement using the fact that $B$ is paracompact.
+    Since $E(\bb)$ is a neighborhood of $\cyldown{B}$,
+    there exist $B_i \sub B$ open and $0 < \eps_i < 1$ with $\bigcup_{i \in I} B_i = B$ such that
+    \[ \bigcup_{i \in I } B_i \cross \ball[\eps_i] \sub E(\bb). \]
+    Without loss of generality,
+    we may assume that the collection $\{B_i\}$ is locally finite by using
+    a locally finite refinement if necessary, utilizing the fact that $B$ is paracompact.
 
-    Furthermore, $B$ being paracompact hausdorff we have a partition of unity
+    Furthermore, $B$ being paracompact hausdorff yields a partition of unity
     \[ f_i: B \to [0, 1] \twith \supp{f_i} \sub B_i\]
-    such that $\sum_{i \in I}f_i = 1$.
+    such that $\sum_{i \in J}f_i = 1$.
     
     Now, we define a map
-    \[ \lambda: B \to (0, \infty) \twith \lambda := \sum_{i \in I} \eps_i f_i, \]
-    which has the property that $\abs{x} < \lambda(b) \implies (b, x) \in E(\bb)$, because
+    \[ \lambda: B \to (0, \infty) \twith \lambda := \sum_{i \in J} \eps_i f_i, \]
+    which has the property that $\abs{x} < \lambda(b) \implies (b, x) \in E(\bb)$ since
     \[ \abs{x} < \lambda(b) \]
     \[ \iff  \abs{x} < \eps_{i_1} f_{i_1}(b) + \cdots + \eps_{i_n} f_{i_n}(b) \]
     \[ \iff 0 < (\eps_{i_1} - \abs{x}) f_{i_1}(b) + \cdots + (\eps_{i_n} - \abs{x}) f_{i_n}(b) \]
-    \[ \implies \exists i \in I: 0 < (\eps_{i_1} - \abs{x}) f_{i_1}(b) \]
+    \[ \implies \exists i \in J: 0 < (\eps_{i_1} - \abs{x}) f_{i_1}(b) \]
     \[ \implies (b, x) \in B_i \cross \ball[\eps_i]  \implies (b, x) \in E(\bb). \]
 
     Finally, we have a homeomorphism between the open subset
     $\set{(b, x) \in B \cross \R^n}{\abs{x} < \lambda(b)} \sub E(\bb)$ and $B \cross \R^n$ via
     \[ (b, x) \mapsto (b, \frac{x}{\lambda(b) - \abs{x}}). \]
-    Note that $(b, 0) \mapsto (b, 0)$, hence this homeomorphism
-    is commutes with the injection and projection maps.
-
-    `$\impliedby$'
-
-    This is simply a weakening of the definition of triviality. 
+    Since $(b, 0)$ is mapped to $(b, 0)$,
+    the homeomorphism commutes with the injection and projection maps.
+    % TODO: explain commutativity
 \end{myproof}
