--- a/src/sections/normal/parts/totalspace.tex
+++ b/src/sections/normal/parts/totalspace.tex
@@ -2,17 +2,17 @@
 \begin{myparagraph}
     The total space $E(\ind{r}\bt_N)$ is a topological manifold.
     This can be seen with
-    \[ E(\ind{r}\bt_N) \cong V \cross N. \]
+    \[ E(\ind{r}\bt_N) = \set{(v, n_1, n_2) \in V \cross (N \cross N)}{r(v) = n_1} \cong V \cross N. \]
 
-    Together with $N \incl M \xto{i_r} E(\ind{r}\bt_N)$, we can assume that
+    Together with $N \incl M \xto{i_{\bt}} E(\ind{r}\bt_N)$, we can assume that
     $N$ is an embedded submanifold of $E(\ind{r}\bt_N)$.
-    Note that $i_r$ is an embedding due to the construction of the induced microbundle.
+    Note that $i_{\bt}$ is an embedding due to the construction of the induced microbundle.
 \end{myparagraph}
 
 % lemma
-\begin{mystatement}{lemma}{normal::total}
+\begin{mystatement}{lemma}{normal::total}[62]
     Let $N \sub M$ be an embedded submanifold and let $r: V \to N$ be a retraction.
-    Then there exists a normal microbundle $\bn$ of $N$ in $E(\ind{r}\bt_N)$ such that $\bn \cong \ind{\iota}\bt_V$.
+    Then there exists a normal microbundle $\bn$ of $N$ in $E(\ind{r}\bt_N)$. % such that $\bn \cong \ind{\iota}\bt_V$.
 \end{mystatement}
 
 % proof
@@ -33,11 +33,10 @@
     and between the projection maps by
     \[ \pi_1(n_1, n_2) = n_1 = j_\iota(n_1, n_1, n_2) = j_\iota(\psi(n_1, n_2)), \]
     which concludes the proof.
-    1
     
-    Furthermore, $\ind{r}\bt_N\restr{N}$ is isomorphic to $\ind{\iota}\bt_V$ is given by
-    \[ \psi: E(\ind{\iota}\bt_V) \isomto E(\ind{r}\bt_N). \]
-    where commutativity with the injection and projection maps
-    follow from the diagram in \myintref{normal::commute} and from the following equation:
-    \[ j_\iota(n, v_1, v_2) = n = j_r(v_2) \]
+    % Furthermore, $\ind{r}\bt_N\restr{N}$ is isomorphic to $\ind{\iota}\bt_V$ is given by
+    % \[ \psi: E(\ind{\iota}\bt_V) \isomto E(\ind{r}\bt_N). \]
+    % where commutativity with the injection and projection maps
+    % follow from the diagram in \myintref{normal::commute} and from the following equation:
+    % \[ j_\iota(n, v_1, v_2) = n = j_r(v_2) \]
 \end{myproof}
