--- a/src/sections/suspension/parts/whitney.tex
+++ b/src/sections/suspension/parts/whitney.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{definition}{suspension::whitney}
+\begin{mystatement}{definition}{suspension::whitney}[70]
     Given two two rooted microbundles $\bb$ and $\bb'$ over $B$,
     we equip the Whitney sum $\whitney{\bb}{\bb'}$ with the rooting
     \[ \germdef{\whitney{R}{R'}}{(\whitney{\bb}{\bb'})\restr{b_0}}{\whitney{\be[n_1]{b_0}}{\be[n_2]{b_0}} = \be[n_1 + n_1]{b_0}}. \]
@@ -7,7 +7,7 @@
 \end{mystatement}
 
 % lemma
-\begin{mystatement}{lemma}{suspension::compatability}
+\begin{mystatement}{lemma}{suspension::compatability}[70]
     Let $\ba$ and $\ba'$ be two rooted microbundles over $A$,
     and let $\bb$ and $\bb'$ be two rooted microbundle over $B$.
     Then the following (non-rooted) isomorphy holds:
